--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 }
 body {
   font-family: "Roboto", sans-serif;
-  font-style: normal;
+  font-style: 400;
   letter-spacing: 0.03em;
   background-color: var(--primary-title-color);
 }
@@ -333,15 +333,6 @@ img {
   position: relative;
 }
 .pictures-label {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--primary-title-color);
-  background: rgba(47, 48, 58, 0.8);
-  width: 100%;
   padding: 27px 82px;
   position: absolute;
   bottom: 0;
@@ -472,10 +463,11 @@ img {
 }
 .footer-container {
   display: flex;
+  align-items: baseline;
 }
-.address {
-  display: flex;
-  font-style: normal;
+.footer-address {
+  width: 231px;
+  margin-right: 70px;
 }
 .address-row .link.maps {
   color: var(--primary-title-color);
@@ -485,16 +477,15 @@ img {
   font-weight: 400;
   font-size: 14px;
   letter-spacing: 0.03em;
-  text-decoration: none;
   color: var(--text-item-color);
   color: rgba(255, 255, 255, 0.6);
 }
 .address-auth-nav {
-  margin-right: 70px;
+  display: flex;
+  font-style: normal;
+  flex-direction: column;
 }
-.address-row {
-  align-items: baseline;
-}
+
 .address-row:not(:last-child) {
   margin-bottom: 9px;
 }
@@ -508,8 +499,7 @@ img {
 /* ------ */
 .footer-social {
   width: 206px;
-  height: 80px;
-  padding-top: 12px;
+  margin-right: 90px;
 }
 .footer-headline {
   margin-bottom: 20px;
@@ -525,6 +515,39 @@ img {
 }
 .footer-social-link .social-icon {
   fill: var(--primary-title-color);
+}
+/* ---- */
+.form-online {
+  display: flex;
+}
+.online-input {
+  padding: 15px 16px;
+  margin-right: 12px;
+  width: 358px;
+  height: 50px;
+  color: var(--primary-title-color);
+  background-color: transparent;
+  border: none;
+  box-sizing: border-box;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+.form-online::placeholder {
+  width: 47px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.online-btn {
+  padding: 10px 28px;
+  width: 200px;
+  color: var(--primary-title-color);
+}
+.online-btn-icon {
+  width: 24px;
 }
 /* ---Portfolio ---*/
 .activities {
@@ -639,4 +662,98 @@ img {
 .close-btn-icon {
   width: 30px;
   height: 30px;
+}
+/* ----form----- */
+.modal-form {
+  width: 528px;
+  min-height: 581px;
+  outline: 3px solid #28da72;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px;
+}
+.modal-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+}
+.modal-field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+  outline: 3px solid mediumblue;
+}
+.modal-comment label,
+.modal-field label {
+  margin-bottom: 4px;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--text-item-color);
+}
+.textarea-comment::placeholder,
+.modal-input::placeholder {
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+/* padding: 12px 16px; */
+.modal-input {
+  margin: 0;
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+.modal-icon {
+  position: absolute;
+  width: 13px;
+
+  transform: translateY(-50%);
+}
+.modal-comment {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  /* outline: 3px solid mediumblue; */
+}
+.textarea-comment {
+  padding: 12px 16px;
+  width: 448px;
+  height: 120px;
+  resize: none;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+}
+.modal-checkbox {
+  margin-bottom: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.input-checkbox {
+  background: var(--title-text-color);
+}
+.modal-checkbox label {
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: var(--text-item-color);
+}
+.modal-text {
+  color: var(--accent-color);
+  text-decoration: underline;
+}
+/* --кнопка form-- */
+.modal-btn {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+.modal-btn .hero-button {
+  color: var(--primary-title-color);
 }
