--- a/css/styles.css
+++ b/css/styles.css
@@ -333,6 +333,15 @@ img {
   position: relative;
 }
 .pictures-label {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--primary-title-color);
+  background: rgba(47, 48, 58, 0.8);
+  width: 100%;
   padding: 27px 82px;
   position: absolute;
   bottom: 0;
