--- a/css/styles.css
+++ b/css/styles.css
@@ -536,11 +536,11 @@ img {
   height: 50px;
   color: var(--primary-title-color);
   background-color: transparent;
-  border: none;
   box-sizing: border-box;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  outline: 0px;
 }
 .form-online::placeholder {
   width: 47px;
@@ -549,14 +549,16 @@ img {
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
-
 .online-btn {
   padding: 10px 28px;
   width: 200px;
   color: var(--primary-title-color);
+  display: flex;
 }
 .online-btn-icon {
+  height: 24px;
   width: 24px;
+  margin-left: 10px;
 }
 /* ---Portfolio ---*/
 .activities {
@@ -647,9 +649,9 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-
   min-width: 528px;
   min-height: 581px;
+  padding: 40px;
   background-color: var(--primary-title-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -674,12 +676,10 @@ img {
 }
 /* ----form----- */
 .modal-form {
-  width: 528px;
-  min-height: 581px;
   outline: 3px solid #28da72;
   margin-left: auto;
   margin-right: auto;
-  padding: 40px;
+  /* padding: 40px; */
 }
 .modal-title {
   font-weight: 700;
@@ -693,7 +693,7 @@ img {
   display: flex;
   flex-direction: column;
   margin-bottom: 10px;
-  outline: 3px solid mediumblue;
+  /* outline: 3px solid mediumblue; */
 }
 .modal-comment label,
 .modal-field label {
@@ -708,20 +708,20 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.01em;
+  padding: 12px 16px;
   color: rgba(117, 117, 117, 0.5);
 }
-/* padding: 12px 16px; */
 .modal-input {
   margin: 0;
   width: 100%;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: 0px;
 }
 .modal-icon {
   position: absolute;
   width: 13px;
-
   transform: translateY(-50%);
 }
 .modal-comment {
@@ -731,12 +731,12 @@ img {
   /* outline: 3px solid mediumblue; */
 }
 .textarea-comment {
-  padding: 12px 16px;
   width: 448px;
   height: 120px;
   resize: none;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
+  outline: 0px;
 }
 .modal-checkbox {
   margin-bottom: 30px;
