--- a/css/styles.css
+++ b/css/styles.css
@@ -542,6 +542,9 @@ img {
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   outline: 0px;
 }
+.online-input:focus {
+  border-color: var(--accent-color);
+}
 .form-online::placeholder {
   width: 47px;
   font-size: 16px;
@@ -690,10 +693,10 @@ img {
   margin-bottom: 12px;
 }
 .modal-field {
-  display: flex;
-  flex-direction: column;
+  position: relative;
+  /* display: flex;
+  flex-direction: column; */
   margin-bottom: 10px;
-  /* outline: 3px solid mediumblue; */
 }
 .modal-comment label,
 .modal-field label {
@@ -708,8 +711,11 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.01em;
-  padding: 12px 16px;
   color: rgba(117, 117, 117, 0.5);
+}
+.input-wrapper {
+  display: block;
+  position: relative;
 }
 .modal-input {
   margin: 0;
@@ -718,11 +724,21 @@ img {
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   outline: 0px;
+  padding-left: 42px;
+}
+.modal-input:focus {
+  border-color: var(--accent-color);
+}
+.modal-input:focus + .modal-icon {
+  fill: var(--accent-color);
 }
 .modal-icon {
   position: absolute;
-  width: 13px;
+  left: 12px;
+  top: 50%;
   transform: translateY(-50%);
+  width: 18px;
+  height: 18px;
 }
 .modal-comment {
   display: flex;
@@ -731,12 +747,16 @@ img {
   /* outline: 3px solid mediumblue; */
 }
 .textarea-comment {
+  padding: 12px 16px;
   width: 448px;
   height: 120px;
   resize: none;
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   outline: 0px;
+}
+.textarea-comment:focus {
+  border-color: var(--accent-color);
 }
 .modal-checkbox {
   margin-bottom: 30px;
@@ -747,11 +767,32 @@ img {
 .input-checkbox {
   background: var(--title-text-color);
 }
-.modal-checkbox label {
+.label-checkbox {
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--text-item-color);
+  display: flex;
+}
+.contour-checkbox {
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--title-text-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  margin-right: 8px;
+  display: flex;
+  align-items: center;
+}
+.input-checkbox:checked + .contour-checkbox {
+  background-color: var(--accent-color);
+  border: none;
+  justify-items: center;
+}
+.check-icon {
+  width: 11px;
+  height: 8px;
 }
 .modal-text {
   color: var(--accent-color);
@@ -761,7 +802,7 @@ img {
 .modal-btn {
   display: flex;
   justify-content: center;
-  margin-bottom: 40px;
+  margin: 0 auto;
 }
 .modal-btn .hero-button {
   color: var(--primary-title-color);
