--- a/css/styles.css
+++ b/css/styles.css
@@ -669,6 +669,7 @@ img {
   cursor: pointer;
   background-color: var(--primary-title-color);
   fill: #000000;
+  transition: fill var(--timing-duration) var(--timing-function);
 }
 .close-btn:hover {
   fill: var(--accent-color);
@@ -721,6 +722,7 @@ img {
   border: 1px solid rgba(33, 33, 33, 0.2);
   outline: 0px;
   padding-left: 42px;
+  transition: border-color var(--timing-duration) var(--timing-function);
 }
 .modal-input:focus {
   border-color: var(--accent-color);
@@ -735,6 +737,7 @@ img {
   transform: translateY(-50%);
   width: 18px;
   height: 18px;
+  transition: fill var(--timing-duration) var(--timing-function);
 }
 .modal-comment {
   display: flex;
@@ -749,6 +752,7 @@ img {
   border-radius: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   outline: 0px;
+  transition: border-color var(--timing-duration) var(--timing-function);
 }
 .textarea-comment:focus {
   border-color: var(--accent-color);
@@ -757,7 +761,7 @@ img {
   margin-bottom: 30px;
 }
 .input-checkbox {
-  background: var(--title-text-color);
+  background-color: var(--title-text-color);
 }
 .label-checkbox {
   font-size: 14px;
